--- a/home.html
+++ b/home.html
@@ -2,12 +2,115 @@
 <html>
 
 <head>
+    <title>Discovering The World</title>
 </head>
 
 <body>
-    <div id="add">
-        <span>[Making your Life Easier]</span>
-        <span>Discovering the World</span>
+    <div class="header">
+    <h4><font color="red">[Making Your Life Easier]</font></h4>
+    <h1>DISCOVERING THE WORLD</h1>
+
+<!-- OL' FASHIONED BUTTONS
+    <button>All</button>
+    <button>Travel</button>
+    <button>Lifestyle</button>
+    <button>Business</button>
+    <button>Food</button>
+    <button>Work</button> -->
+
+    
+    <nav>
+    <a href="">All</a> |
+    <a href="">Travel</a> |
+    <a href="">Lifestyle</a> |
+    <a href="">Business</a> |
+    <a href="">Food</a> |
+    <a href="">Work</a> |
+    </nav>
+    </div>
+
+    <br><br>
+
+    <div class="form"></div>
+    <details>
+        <summary><strong>POP-UP FORM</strong></summary>
+    <form action="">
+        Title:
+        <br>
+        <input type="text" name="title" placeholder="title">
+        <br>
+        Description:
+        <br>
+        <input type="text" name="description" placeholder="description">
+        <br>
+         Category:
+         <br>
+         <input list="category"/>
+         <datalist id="category">
+            <option value="All" tabindex="1"> 
+            <option value="Travel" tabindex="2"> 
+            <option value="Lifestyle" tabindex="3">
+            <option value="Business" tabindex="4">  
+            <option value="Food" tabindex="5">
+            <option value="Work" tabindex="6">      
+         </datalist>
+        <br>
+
+        <!-- OL' FORM
+        Category
+         <br>
+        <select>
+        <option>All</option>
+        <option>Travel</option>
+        <option>Lifestyle</option>
+        <option>Business</option>
+        <option>Food</option>
+        <option>Work</option>
+        </select>
+        <br> -->
+
+        URL of the image:
+        <br>
+        <input type="url" name="image">
+
+        <input type="submit" name="submit">
+    </form>  
+    </details>  
+    <br>
+
+
+
+
+
+
+
+    <div class="images">
+    <img src="https://us-east.manta.joyent.com/condenast/public/cnt-services/production/2016/01/14/5698051378d099fc122487e5_Sunset-Beach-Oahu-cr-getty.jpg" alt="dusky-beach" width="500" height="400">
+    <img src="http://cdn3.livelongandtravel.com:8080/hawaii.jpg" alt="sunny-beach" width="500" height="400">
+    </div>
+<!-- 
+    <picture>
+      <source media="(min-width: 650px)" srcset="https://us-east.manta.joyent.com/condenast/public/cnt-services/production/2016/01/14/5698051378d099fc122487e5_Sunset-Beach-Oahu-cr-getty.jpg">
+      <source media="(min-width: 465px)" srcset="https://us-east.manta.joyent.com/condenast/public/cnt-services/production/2016/01/14/5698051378d099fc122487e5_Sunset-Beach-Oahu-cr-getty.jpg">
+      <img src="https://us-east.manta.joyent.com/condenast/public/cnt-services/production/2016/01/14/5698051378d099fc122487e5_Sunset-Beach-Oahu-cr-getty.jpg" alt="Flowers" style="width:auto;">
+    </picture> -->
+
+<!--     </form>
+    Category:
+    <br>
+    <select>
+        <br>
+        <option>All</option>
+        <option>Travel</option>
+        <option>Lifestyle</option>
+        <option>Business</option>
+        <option>Food</option>
+        <option>Work</option>
+    </select> -->
+
+
+
+    <!-- <div id="add">
     </div>
     <div id="add">
         <button></button>
@@ -25,7 +128,7 @@
             <option value="TRAVEL">TRAVEL</option>
         </select>
         <label>Date</label>
-    </div>
+    </div> -->
 </body>
 
 </html>
