Changed home_semantics to add more semantics

--- a/home_semantics.html
+++ b/home_semantics.html
@@ -17,6 +17,47 @@
       <a href="">Work</a> |
       </nav>
 
+          <br><br>
+
+    <div class="form">
+    <details>
+        <summary><strong>POP-UP FORM</strong></summary>
+    <form action="">
+        Title:
+        <br>
+        <input type="text" name="title" placeholder="title">
+        <br>
+        Description:
+        <br>
+        <input type="text" name="description" placeholder="description">
+        <br>
+         Category:
+         <br>
+         <input list="category"/>
+         <datalist id="category">
+            <option value="All" tabindex="1"> 
+            <option value="Travel" tabindex="2"> 
+            <option value="Lifestyle" tabindex="3">
+            <option value="Business" tabindex="4">  
+            <option value="Food" tabindex="5">
+            <option value="Work" tabindex="6">      
+         </datalist>
+        <br>
+
+        URL of the image:
+        <br>
+        <input type="url" name="image">
+
+        <input type="submit" name="submit">
+    </form>  
+    </details>  
+    </div>
+    <br>
+
+      <article class="images">
+      	<img src="https://us-east.manta.joyent.com/condenast/public/cnt-services/production/2016/01/14/5698051378d099fc122487e5_Sunset-Beach-Oahu-cr-getty.jpg" alt="dusky-beach" width="500" height="400">
+    	<img src="http://cdn3.livelongandtravel.com:8080/hawaii.jpg" alt="sunny-beach" width="500" height="400">
+      </article>
 
 
 
