last hour changes

--- a/home_wCSS.html
+++ b/home_wCSS.html
@@ -79,7 +79,7 @@
   	</article>
 
 
-  	<article>
+<!--   	<article>
   		<a href="#" target="_blank"></a>
   		<img src="https://i.pinimg.com/originals/75/a7/b4/75a7b43b6728b39c3f9948870c7773c9.jpg" alt="a sunny beach" width="500" height="400"/>
   		<div>
@@ -97,7 +97,7 @@
   				</div>
   			</div>
   		</div>
-  	</article>
+  	</article> -->
 
 
 
