--- a/home_wCSS_Boot.html
+++ b/home_wCSS_Boot.html
@@ -132,15 +132,15 @@
   </main>
  -->
 
-  <main class="container">
+<!--  <main class="container">
     <article class="row">
       
-      <div class="col-xl-6"> 
+      <div class="col-xl-6 col-md-6 col-sm-12"> 
       <a href="#" target="_blank"></a>
       <img src="http://www.wallpaperbetter.com/wallpaper/992/22/339/tropical-ocean-scenery-palm-tree-house-dusk-1080P-wallpaper-middle-size.jpg" alt="beach at dusk" class="img-fluid"/>
       </div>
 
-      <div class="col-xl-6">
+      <div class="col-xl-6 col-md-6 col-sm-12">
       <a href="#" target="_blank"></a>
       <img src="https://i.pinimg.com/originals/75/a7/b4/75a7b43b6728b39c3f9948870c7773c9.jpg" alt="a sunny beach" class="img-fluid"/>
       </div>
@@ -149,19 +149,66 @@
 
     <article class="row">
 
-      <div class="col-xl-6">
+      <div class="col-xl-6 col-md-6 col-sm-12">
       <a href="#" target="_blank"></a>
       <img src="http://cdn3.livelongandtravel.com:8080/hawaii.jpg" alt="beach at dusk" class="img-fluid"/>
       </div>
 
-      <div class="col-xl-6">
+      <div class="col-xl-6 col-md-6 col-sm-12">
       <a href="#" target="_blank"></a>
       <img src="https://wallpapercave.com/wp/uGhd3VC.jpg" alt="a sunny beach" class="img-fluid"/>
       </div>
     
-    </article>
+    </article> 
 
-  </main>
+
+
+  </main> -->
+
+<main class="container">
+  <article class="row">
+    <div class="col">
+      <div class="card bg-dark text-white">
+  <img class="card-img" src="https://i.pinimg.com/originals/75/a7/b4/75a7b43b6728b39c3f9948870c7773c9.jpg" alt="Card image">
+  <div class="card-img-overlay">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text">Last updated 3 mins ago</p>
+  </div>
+</div>
+
+
+
+
+    </div>
+    <div class="col">
+      <div class="card bg-dark text-white">
+  <img class="card-img" src="https://i.pinimg.com/originals/75/a7/b4/75a7b43b6728b39c3f9948870c7773c9.jpg" alt="Card image">
+  <div class="card-img-overlay">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text">Last updated 3 mins ago</p>
+  </div>
+</div>
+    </div>
+
+
+
+  </article>
+  
+</main>
+
+<!-- <div class="card bg-dark text-white">
+  <img class="card-img" src="https://i.pinimg.com/originals/75/a7/b4/75a7b43b6728b39c3f9948870c7773c9.jpg" alt="Card image">
+  <div class="card-img-overlay">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text">Last updated 3 mins ago</p>
+  </div>
+</div>
+ -->
+
+
 
 <!-- 
   <main>
